# reimage

./: .gitignore  Makefile  README.md  file_utils.py  main.py  setup.cfg  utils.py
src/image_sort/: __main__.py  file_utils.py
src/reimage/: __init__.py  __main__.py  file_utils.py  utils.py
tests/: test_utils.py
