[metadata]
name=image-sort-sp0x
version=0.0.1
author=Vasil Vasilev
author_email=vaskovasilev94@yahoo.com
description=Image sorting utility based on creation time

[options]
package_dir=
 = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  image_sort=image_sort:main