[metadata]
name=reimage
version=1.0.1
author=Vasil Vasilev
author_email=vaskovasilev94@yahoo.com
description=Image sorting utility based on creation time

[options]
package_dir=
 = src
packages = find:
python_requires = >=3.4
install_requires =
    ffcount>=0.1.9
    pytz>=2023.3
    Pillow>=9.5.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  reimage=reimage.__main__:main
